--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,430 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+	font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/* Beginning of index.html */
+
+header nav {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	width: 65%;
+	margin-left: 240px;
+}
+
+header nav a {
+	display: flex;
+	background-color: white;
+	color: grey;
+	text-align: right;
+	padding: auto;
+	margin: 50px 0px 50px 0px;
+	font-size: 18px;
+	justify-content: center;
+}
+
+header nav section.logo {
+	display: flex;
+	justify-content: flex-end;
+	width: 25%;
+	margin-top: -10px;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+.pagetitle {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	margin-left: 240px;
+	margin-bottom: 50px;
+	width: 65%;
+	text-align: center;
+}
+
+.pagetitle1 {
+	display: flex;
+	flex-wrap: wrap;
+	text-align: center;
+	margin: 100px 100px 50px 80px;
+	width: auto;
+	height: auto;
+}
+
+.pagetitle1 h1 {
+	font-size: 500%;
+}
+
+.pagetitle a {
+	display: flex;
+	flex-direction: end;
+	border: solid black 1px;
+	padding: 8px 40px 3px 40px;
+	margin-left: 80px;
+	color: black;
+}
+
+.roundpic {
+	display: flex;
+	width: auto;
+	height: auto;
+	margin: 40px 140px 40px 0px;
+}
+
+.featuresabout {
+	display: flex;
+	justify-content: space-evenly;
+	width: 65%;
+	margin-left: 237px;
+}
+
+.features {
+	display: flex;
+	flex-wrap: wrap;
+	border-top: 1px solid black;
+	margin: auto;
+	width: auto;
+	text-align: left;
+}
+
+.features h2 {
+	display: flex;
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
+.features p {
+	display: flex;
+	margin-bottom: 30px;
+}
+
+.about {
+	display: flex;
+	flex-wrap: wrap;
+	border-top: 1px solid black;
+	margin: auto;
+	width: auto;
+	text-align: left;
+}
+
+.about h2 {
+	display: flex;
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
+.about p {
+	display: flex;
+	margin-bottom: 30px;
+}
+
+.codesnippet {
+	text-align: center;
+}
+
+.servicesproductvision {
+	display: flex;
+	justify-content: space-evenly;
+	width: 65%;
+	margin-left: 237px;
+}
+
+.services {
+	display: flex;
+	flex-wrap: wrap;
+	border-bottom: 1px solid black;
+	margin: auto;
+	width: auto;
+	text-align: left;
+}
+
+.services h2 {
+	display: flex;
+	/* flex-wrap: wrap; */
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
+.services p {
+	display: flex;
+	margin-bottom: 50px;
+}
+
+.product {
+	display: flex;
+	flex-wrap: wrap;
+	border-bottom: 1px solid black;
+	margin: auto;
+	width: auto;
+	text-align: left;
+}
+
+.product h2 {
+	display: flex;
+	/* flex-wrap: wrap; */
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
+.product p {
+	display: flex;
+	margin-bottom: 50px;
+}
+
+.vision {
+	display: flex;
+	flex-wrap: wrap;
+	border-bottom: 1px solid black;
+	margin: auto;
+	width: auto;
+	text-align: left;
+}
+
+.vision h2 {
+	display: flex;
+	/* flex-wrap: wrap; */
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
+.vision p {
+	display: flex;
+	margin-bottom: 50px;
+}
+
+.contact {
+	display: flex;
+	flex-direction: column;
+	margin: 30px 0px 50px 0px;
+	text-align: left;
+}
+
+.contact h3, address {
+	margin-left: 237px;
+	margin-right: 235px;
+}
+
+footer {
+	text-align: center;
+	font-size: 15px;
+	margin-bottom: 30px;
+	font-weight: bold;
+}
+
+/* End of index.html */
+
+
+/* Beginning of services.html */
+
+.services-header-img {
+	display: flex;
+	height: auto;
+	margin: 0px 0px 50px 240px;
+}
+
+.button {
+	border-radius: 5px;
+	padding: 8px 30px 8px 30px;
+	font-size: 12px;
+	background-color: white;
+	border: 1px solid black;
+	margin-top: 25px;
+}
+
+.services2 {
+	display: flex;
+	flex-direction: column;
+	border-bottom: 1px solid black;
+	width: 65%;
+	height: auto;
+	margin-left: 240px;
+	padding-bottom: 35px;
+	font-weight: bold;
+}
+
+.services2 h2 {
+	font-size: 30px;
+}
+
+.dduxui {
+	display: flex;
+	flex-direction: row;
+	justify-content: left;
+	width: 75%;
+	height: auto;
+	margin-left: 240px;
+	padding: 35px 0px 0px 0px;
+	font-weight: bold;
+}
+
+.DD {
+	background-color: whitesmoke;
+	margin-right: 20px;
+	margin-left: 20px;
+	padding: 35px 20px 35px 20px;
+	border: 1px solid black;
+}
+
+.uxui {
+	background-color: whitesmoke;
+	padding: 35px 20px 35px 20px;
+	border: 1px solid black;
+}
+
+.dmwebdev {
+	display: flex;
+	flex-direction: row;
+	justify-content: left;
+	width: 75%;
+	height: auto;
+	margin-left: 240px;
+	padding: 35px 0px 35px 0px;
+	font-weight: bold;
+}
+
+.DM {
+	background-color: whitesmoke;
+	margin-right: 20px;
+	margin-left: 20px;
+	padding: 35px 20px 35px 20px;
+	border: 1px solid black;
+}
+
+.webdev {
+	background-color: whitesmoke;
+	padding: 35px 20px 35px 20px;
+	border: 1px solid black;
+}
+
+.ios-android {
+	display: flex;
+	flex-direction: row;
+	justify-content: left;
+	width: 75%;
+	height: auto;
+	margin-left: 240px;
+	padding: 0px 0px 35px 0px;
+	font-weight: bold;
+}
+
+.ios {
+	background-color: whitesmoke;
+	margin-right: 20px;
+	margin-left: 20px;
+	padding: 35px 20px 35px 20px;
+	border: 1px solid black;
+}
+
+.android {
+	background-color: whitesmoke;
+	padding: 35px 20px 35px 20px;
+	border: 1px solid black;
+}
+
+.services-facts {
+	display: flex;
+	width: 62%;
+	margin-bottom: 35px;
+	border-top: 2px solid black;
+	justify-content: space-between;
+	margin-left: 260px;
+	font-weight: bold;
+}
+
+.facts {
+	display: flex;
+	flex-direction: column;
+	padding: 35px 0px 0px 0px; 
+}
+
+.facts-description {
+	padding-bottom: 20px;
+}
+
+.list {
+	display: flex;
+}
+
+ul {
+	list-style-type: square;
+	margin-left: 20px;
+}
+
+li {
+	padding-bottom: 10px;
+}
+
+.services-info-img {
+	transform: scale(0.96);
+	padding: 35px 0px 25px 0px; 
+}
+
+/* End of services.html */
