--- a/css/index.css
+++ b/css/index.css
@@ -75,77 +75,67 @@ h1, h2, h3, h4, h5 {
 
 		@media (max-width: 800px) {
 
-			.container-nav {
-				display: flex;
-				justify-content: center;
-				max-width: 800px;
-				margin: auto;
-			}
-
 			header {
 				display: flex;
-				justify-content: center;
-				max-width: 800px;
+				flex-direction: column-reverse;
+				align-items: center;
 			}
 
 			header nav {
-				display: flex;
-				justify-content: space-between;
-				flex-wrap: wrap-reverse;
-				padding: 0px;
-				margin-right: 25%;
+				width: 100%;
+				padding: 30px 0px 30px 0px;
+				justify-content: space-evenly;
+				margin-left: -150px;
+			}
+
+			header nav a {
+				padding: 0px 10px 0px 10px;
 			}
 
 			header nav section.logo {
 				display: flex;
 				justify-content: center;
-				width: 30%;
-				margin-left: 80px;
-				margin-bottom: -50px;
 			}
 
 			.pagetitle {
 				display: flex;
-				justify-content: space-around;
-				max-width: 800px;
+				justify-content: center;
+				align-items: center;
 				margin-top: -80px;
 			}
 
-			.pagetitle.pagetitle1 {
-				display: flex;
-				justify-content: center;
-				max-width: 800px;			
+			.pagetitle .pagetitle1 {
+				margin-left: 80px;
 			}
 
-			.pagetitle.pagetitle1 a {
+			.pagetitle .pagetitle1 a {
 				display: flex;
-				justify-content: center;
-				max-width: 800px;
+				justify-content: space-evenly;
 			}
 
 			.roundpic {
 				visibility: hidden;
 			}
 
-			.featuresabout.features.p {
-				display: flex;
-				margin-bottom: 30px;
-				margin-right: 150px;
-			}	
+			.featuresabout .features {
+				width: 100%;
+				padding-right: 40px;
+				flex-wrap: wrap;
+			}
 
-			.codesnippet.img {
-				display: flex;
-				justify-content: center;
-				max-width: 800px;
-				text-align: center;
+			.featuresabout .about {
+				width: 100%;
+				padding-right: 0px;
+			}
+
+			.codesnippet img {
+				max-width: 65%;
+				margin-left: 200px;
 			}	
 
 			footer p {
-				display: inline-block;
-				width: 22%;
-				margin-left: 38%;
-				margin-right: 38%;
-								
+				width: 100%;
+				margin-left: 105px;
 			}
 		}
 
@@ -157,49 +147,25 @@ h1, h2, h3, h4, h5 {
 
 		@media (max-width: 500px) {
 			
-			..container-nav {
-				display: flex;
-				flex-flow: column;
-				max-width: 500px;
-				margin: auto;
-			}
-
-			header {
-				display: flex;
-				/* justify-content: center; */
-				max-width: 500px;
-			}
-
 			header nav {
-				display: flex;
+				flex-direction: column;
 				justify-content: space-between;
-				/* flex-wrap: wrap-reverse; */
-				padding: 0px;
-				margin-right: 25%;
+				text-align: center;
+				margin: 0 auto;
 			}
 
-			header nav section.logo {
-				display: flex;
-				justify-content: center;
-				width: 30%;
-				margin-left: 80px;
-				margin-bottom: -50px;
+			header nav a {
+				margin-top: 20px;
+				border-bottom: 1px solid gray;
+				width: 300%;
+				padding-bottom: 10px;
 			}
 
-			.pagetitle {
-				display: flex;
-				justify-content: space-around;
-				max-width: 800px;
-				margin-top: -80px;
+			.pagetitle .pagetitle1 {
+				margin-left: -5px;
 			}
 
-			.pagetitle.pagetitle1 {
-				display: flex;
-				justify-content: center;
-				max-width: 800px;			
-			}
-
-			.pagetitle.pagetitle1 a {
+			.pagetitle .pagetitle1 a {
 				display: flex;
 				justify-content: center;
 				max-width: 800px;
@@ -209,58 +175,54 @@ h1, h2, h3, h4, h5 {
 				visibility: hidden;
 			}
 
-			.featuresabout.features.p {
-				display: flex;
-				margin-bottom: 30px;
-				margin-right: 150px;
-			}	
+			.featuresabout {
+				flex-direction: column;
+			}
 
-			.codesnippet.img {
-				display: flex;
-				justify-content: center;
-				max-width: 800px;
-				text-align: center;
-			}	
+			.codesnippet img {
+				max-width: 65%;
+				margin-left: 237px;
+			}
+
+			.servicesproductvision {
+				flex-direction: column;
+				
+			}
+
+			.contact h3 {
+				width: 65%;
+			}
+
+			.contact address {
+				width: 65%;
+			}
 
 			footer p {
-				display: inline-block;
-				width: 22%;
-				margin-left: 38%;
-				margin-right: 38%;
-								
+				padding-left: 100px;
 			}
 		}
 
 	/* End of mobile RWD */
 
-header nav {
+header {
 	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+	padding: 35px 0;
 	width: 65%;
 	margin-left: 240px;
 }
 
+header nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 55%;
+}
+
 header nav a {
-	display: flex;
-	justify-content: center;
-	background-color: white;
 	color: grey;
-	text-align: right;
-	padding: auto;
-	margin: 50px 0px 50px 0px;
-	font-size: 18px;
-}
-
-header nav section.logo {
-	display: flex;
-	justify-content: flex-end;
-	width: 25%;
-	margin-top: -10px;
-}
-
-a:link {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .pagetitle {
